--- a/docker-compose.yml.template
+++ b/docker-compose.yml.template
@@ -14,7 +14,7 @@ services:
     depends_on:
       - §§INSTANCE-varapp-backend
     environment:
-      - BACKEND_URL="http://§§INSTANCE-backend.§§BASEURL/varapp"
+      - BACKEND_URL=http://§§INSTANCE-backend.§§BASEURL/varapp
     proxy:
      TYPE: PRIMARY
      URLPREFIX: §§INSTANCE
