--- a/appinfo.json
+++ b/appinfo.json
@@ -1,6 +1,6 @@
 {
 	"name": "Varappv2.0.3",
-	"short_name": "varapp",
+	"short_name": "Varapp",
 	"version": "2.0.3",
 	"description": "Varapp is an application to filter genetic variants, with a reactive graphical user interface.",
 	"short_description": "Varapp: filter genetic variants",
