--- a/appinfo.json
+++ b/appinfo.json
@@ -1,5 +1,5 @@
 {
-	"name": "Varappv2.0.3",
+	"name": "Varapp",
 	"short_name": "Varapp",
 	"version": "2.0.3",
 	"description": "Varapp is an application to filter genetic variants, with a reactive graphical user interface.",
@@ -7,5 +7,6 @@
 	"catalogue_url": "",
 	"application_url": "https://github.com/sib-swiss/varapp-backend-py",
 	"tags": ["Bioinformatics", "Variant filtering"],
-	"application_documentation_url": "https://github.com/sib-swiss/varapp-docs"
+	"application_documentation_url": "https://github.com/sib-swiss/varapp-docs",
+	"instance_information": "work in progress"
 }
