--- a/appinfo.json
+++ b/appinfo.json
@@ -1,7 +1,7 @@
 {
 	"name": "Varapp",
 	"short_name": "Varapp",
-	"version": "2.0.3",
+	"version": "v2.0.3",
 	"description": "Varapp is an application to filter genetic variants, with a reactive graphical user interface.",
 	"short_description": "Varapp: filter genetic variants",
 	"catalogue_url": "",
